--- a/css/style.css
+++ b/css/style.css
@@ -346,6 +346,23 @@ ul.nav.navbar-nav .red_color {
   .motivi h2 {
     color: #246BB2; }
 
+.news {
+  float: left;
+  position: relative; }
+  .news .motivi:nth-child(odd) {
+    background: #FFFFFF; }
+  .news .motivi:nth-child(even) {
+    background: rgba(171, 171, 171, 0.3); }
+
+.excerpt-mask {
+  background: url(img/mask_excerpt.png) center bottom repeat-x;
+  height: 30px;
+  width: 100%;
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  z-index: 3000; }
+
 .join {
   background: #FFFFFF;
   height: 270px; }
@@ -970,22 +987,36 @@ tr:last-child {
   margin: 10px; }
 
 .value_box {
-  width: 1080px;
   /* opacity:0.5; */
   height: 100px;
-  background: #FFFFFF; }
+  background: #FFFFFF;
+  margin: 10px 15px 0 15px; }
+  @media screen and (max-width: 991px) {
+    .value_box {
+      margin: 0;
+      height: auto; } }
+
+.votes_infos_box {
+  padding-right: 0; }
+  @media screen and (max-width: 991px) {
+    .votes_infos_box {
+      padding-right: 15px; } }
 
 .value_map_box {
   width: 620px;
   height: 200px; }
 
 .value_info_box {
-  width: 1080px;
-  height: auto; }
+  width: 100%;
+  height: auto;
+  margin: 10px 0 0 0;
+  max-height: 300px; }
+  .value_info_box .canvas {
+    max-height: 300px; }
 
 .value_chart {
   height: auto;
-  width: 1080px !important;
+  width: 100% !important;
   margin: 0px 10px 0px 0px;
   padding: 10px;
   background: #FFFFFF;
@@ -1005,34 +1036,35 @@ tr:last-child {
   fill: #933131 !important; }
 
 .tables_box {
-  width: 1080px;
+  width: 100%;
   height: auto;
   float: left;
-  position: relative; }
+  position: relative;
+  margin: 10px 0 0 0; }
 
 .value_info_table_box {
-  width: 535px;
+  width: 100%;
   height: auto;
   float: left;
   position: relative;
   background: #FFFFFF;
-  margin-right: 5px;
-  padding: 10px; }
+  padding: 10px;
+  margin: 0; }
 
 .vote_info_table_box {
-  margin-left: 5px;
-  margin-right: 0; }
+  margin: 0; }
 
 .value_stat_box {
-  width: 1080px;
+  width: 100%;
   padding: 5px;
-  background: #FFFFFF; }
+  background: #FFFFFF;
+  margin: 10px 0 0 0; }
 
 .name_box {
-  width: 25%;
+  width: 50%;
   float: left;
   position: relative;
-  height: 100%;
+  height: 100px;
   padding: 10px;
   background: #FFFFFF; }
 
@@ -1057,10 +1089,10 @@ tr:last-child {
   color: #000; }
 
 .team_box {
-  width: 25%;
+  width: 50%;
   float: left;
   position: relative;
-  height: 100%;
+  height: 100px;
   padding: 10px;
   background: #FFFFFF; }
 
@@ -1080,6 +1112,11 @@ tr:last-child {
   font-size: 26px;
   text-align: center;
   color: #000; }
+  @media screen and (max-width: 991px) {
+    .team_item {
+      float: right;
+      margin-left: 0;
+      margin-right: 5px; } }
 
 .role_box {
   float: left;
@@ -1093,7 +1130,7 @@ tr:last-child {
 .media_box {
   float: left;
   position: relative;
-  width: 25%;
+  width: 50%;
   height: 50%;
   background: #9c4c4c;
   color: #fff; }
@@ -1104,7 +1141,7 @@ tr:last-child {
 .current_value_box {
   float: left;
   position: relative;
-  width: 25%;
+  width: 50%;
   height: 50%;
   background: #5291f0;
   color: #FFF; }
