--- a/css/style.scss
+++ b/css/style.scss
@@ -1302,6 +1302,13 @@ tr:last-child {
 	}
 }
 
+.match{
+	.name-player-item{
+		text-align: center;
+		width: 100%;
+		margin-right: 0;
+	}
+}
 
 #reserve_team {
     //margin-left: 2%;
